opam-version: "2.0"
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: [ "Spiros Eliopoulos <spiros@inhabitedtype.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/robur-coop/ocaml-h1"
bug-reports: "https://github.com/robur-coop/ocaml-h1/issues"
dev-repo: "git+https://github.com/robur-coop/ocaml-h1.git"
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0.0"}
  "alcotest" {with-test}
  "stdio" {with-test}
  "bigstringaf" {>= "0.4.0"}
  "angstrom" {>= "0.14.0"}
  "faraday"  {>= "0.6.1"}
  "httpun-types" {>= "0.1.0"}
]
synopsis:
  "A high-performance, memory-efficient, and scalable web server for OCaml"
description: """
http/af implements the HTTP 1.1 specification with respect to parsing,
serialization, and connection pipelining as a state machine that is agnostic to
the underlying IO mechanism, and is therefore portable across many platform.
It uses the Angstrom and Faraday libraries to implement the parsing and
serialization layers of the HTTP standard, hence the name."""
