(executables
 (libraries bigstringaf h1 alcotest)
 (modules
   helpers
   test_client_connection
   test_headers
   test_h1
   test_iovec
   test_method
   test_request
   test_response
   test_server_connection
   test_version)
 (names   test_h1))

(rule
 (alias runtest)
 (package h1)
 (deps test_h1.exe)
 (action (run %{deps})))
